--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+    "files.associations": {
+        "push_swap.h": "c",
+        "stdlib.h": "c"
+    }
 }
